gccida/g1/noce_get_condition
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1983:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1984:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1986:4: error: expected ';' after expression
rtx v14; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1986:5: error: use of undeclared identifier 'v14'
rtx v14; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1991:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)pc_set( jump)[1]; 
               ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1995:28: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v5 = *( _QWORD *)( v4 + 8) == jump[4]; 
     ~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:1998:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v7 == 61 && mode_class_0[*( unsigned __int8 *)( v7 + 2)] == MODE_INT ) 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2001:12: error: expected ';' after expression
v2 = ( rtx)v6; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2006:28: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v12 = reverse_condition( ( rtx_code)*v6); 
                           ^~~~~~~~
                           rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2006:37: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v12 = reverse_condition( ( rtx_code)*v6); 
                         ~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2007:40: error: expected ')'
return gen_rtx_fmt_ee( v12, v11, ( rtx)v7, v10); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2007:22: note: to match this '('
return gen_rtx_fmt_ee( v12, v11, ( rtx)v7, v10); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2012:42: error: expected ')'
v2 = canonicalize_condition( jump, ( rtx)v6, v5, earliest, 0LL); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2012:28: note: to match this '('
v2 = canonicalize_condition( jump, ( rtx)v6, v5, earliest, 0LL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2026:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v2->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2028:37: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v13.rtwint == 61 && mode_class_0[*( unsigned __int8 *)( v13.rtwint + 2)] == MODE_INT ) 
                                    ^~~~~~~~~~~~
                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2030:42: error: expected ')'
v2 = canonicalize_condition( jump, ( rtx)v6, v5, earliest, v13.rtx); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2030:28: note: to match this '('
v2 = canonicalize_condition( jump, ( rtx)v6, v5, earliest, v13.rtx); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2033:1: error: use of undeclared identifier 'v14'
v14 = *earliest; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2036:30: error: use of undeclared identifier 'v14'
while ( rtx_class[*( _WORD *)v14] != 105 || !modified_in_p( v2, v14) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2036:65: error: use of undeclared identifier 'v14'
while ( rtx_class[*( _WORD *)v14] != 105 || !modified_in_p( v2, v14) ) 
                                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/ifcvt.c:2038:1: error: use of undeclared identifier 'v14'
v14 = v14[1].fld[0].rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_get_condition/src/obj/ifcvt.o] Error 1
